--- a/index.html
+++ b/index.html
@@ -41,12 +41,6 @@
     <img src="transparent.png" alt="Logo" style="width: 150px; height: 45px;" />
  </a>
         </div>
-      <div>
-<a href="https://forms.gle/EqezHUM6vWYRBUiB8" class="suggestbutton">
-  <h2>Tell us a game that you liked</h2>
-</a>
-
-      </div>
       
     
   
@@ -154,7 +148,7 @@ const button = document.querySelector('#myButtonx');
   button.addEventListener('click', () => {
     const newWindow = window.open('about:blank', '_blank');
     const iframe = document.createElement('iframe');
-    iframe.src = 'https://infmapi.netlify.app/selection.html';
+    iframe.src = 'https://infmapi.github.io/infmapiog.github.io/selection.html';
     iframe.style.width = '100%';
     iframe.style.height = '100%';
     iframe.style.position = 'absolute';
